--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,9 @@
     <title>{% block title %}Trackpack TrackPack TRACKPACK{% endblock %}</title>
 </head>
 <body>
-    <p>This is the dashboard.</p>
+    <h2>Trackpack</h2>
+    <h4>For tracking your school activities</h4>
+
 {% block content %}
 
 {% endblock %}
