--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Trackpack TrackPack TRACKPACK{% endblock %}</title>
+    <title>{% block title %}TrackPack{% endblock %}</title>
 </head>
 <body>
     <h2>Trackpack</h2>
