--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,13 @@
 
 <p>Login</p>
 
-<form method="post">
+    <form name="login" method="post">
+        <input id="student_number" name="student_number" placeholder="Student Number">
+        <input type="submit" name="btn" value="Login">
+    </form>
+
+    <p>Sign Up</p>
+<form name="sign_up" method="post">
     <input id="first_name" name="first_name" type="text" placeholder="First Name">
     <input id="last_name" name="last_name" type="text" placeholder="Last Name">
     <input id="student_number" name="student_number" type="text" placeholder="Student Number">
@@ -19,7 +25,7 @@
         <option value="11">Junior (11th grade)</option>
         <option value="12">Senior (12th grade)</option>
     </select>
-    <input type="submit" value="Sign Up">
+    <input type="submit" name="btn" value="Sign Up">
 </form>
 
 {% endblock %}
