Change website title

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <title>{% block title %}TrackPack{% endblock %}</title>
 </head>
 <body>
-    <h2>Trackpack</h2>
+    <h2>TrackPack</h2>
     <h4>For tracking your school activities</h4>
 
 {% block content %}
