--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %}
 
 <!-- Changes page title -->
-{% block title %}Dashboard | Trackpack{% endblock %}
+{% block title %}Dashboard | TrackPack{% endblock %}
 
 <!-- Picks up where base.html left off -->
 {% block content %}
