--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,5 +7,8 @@
 <!-- Picks up where base.html left off -->
 {% block content %}
 
-<p>Your student number is: {{ student_number }}</p>
+<h3>{{ user_data['first_name'] }} {{ user_data['last_name'] }}</h3>
+<h4>Student Number: {{ user_data['student_number'] }}</h4>
+<h4>Grade Level: {{ user_data['grade_level'] }}</h4>
+
 {% endblock %}
