--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
 <p>Login</p>
 
     <form name="login" method="post">
-        <input id="student_number_login" name="student_number" placeholder="Student Number" required>
+        <input type="number" id="student_number_login" name="student_number" placeholder="Student Number" required>
         <input type="submit" name="btn" value="Login">
     </form>
 
@@ -20,7 +20,7 @@
 <form name="sign_up" method="post">
     <input id="first_name" name="first_name" type="text" placeholder="First Name" required>
     <input id="last_name" name="last_name" type="text" placeholder="Last Name" required>
-    <input id="student_number" name="student_number" type="text" placeholder="Student Number" required>
+    <input type="number" id="student_number" name="student_number" type="text" placeholder="Student Number" required>
     <select id="grade_level" name="grade_level" placeholder="">
         <option value="9">Freshman (9th grade)</option>
         <option value="10">Sophomore (10th grade)</option>
