Fix attribute error

--- a/templates/login.html
+++ b/templates/login.html
@@ -20,8 +20,8 @@
 <form name="sign_up" method="post">
     <input id="first_name" name="first_name" type="text" placeholder="First Name" required>
     <input id="last_name" name="last_name" type="text" placeholder="Last Name" required>
-    <input type="number" id="student_number" name="student_number" type="text" placeholder="Student Number" required>
-    <select id="grade_level" name="grade_level" placeholder="">
+    <input id="student_number" name="student_number" type="number" placeholder="Student Number" required>
+    <select id="grade_level" name="grade_level">
         <option value="9">Freshman (9th grade)</option>
         <option value="10">Sophomore (10th grade)</option>
         <option value="11">Junior (11th grade)</option>
