--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,8 @@
+<!--
+Flask used to render HTML templates (see server.py)
+Jinja2 used to execute Python inside of templates (surrounded by {% %} or {{}} in code)
+Jinja2 also connects HTML files together (ex. base.html & login.html)
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
