--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
         <input type="submit" name="btn" value="Login">
     </form>
 
-<h3>{{ error_login }}</h3>
+<h3 class="error_display">{{ error_login }}</h3>
 
 <p>Sign Up</p>
 
@@ -31,6 +31,6 @@
     <input type="submit" name="btn" value="Sign Up">
 </form>
 
-<h3>{{ error_sign_up }}</h3>
+<h3 class="error_display">{{ error_sign_up }}</h3>
 
 {% endblock %}
