--- a/templates/prizes.html
+++ b/templates/prizes.html
@@ -12,7 +12,7 @@
 <h4>Your credits: {{ session['credits'] }}</h4>
 
 <h4>{{ message }}</h4>
-<h4>{{ error }}</h4>
+<h4 class="error_display">{{ error }}</h4>
 
 <form method="post">
 
