--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -6,35 +6,37 @@
 
 <!-- Picks up where base.html left off -->
 {% block content %}
+<div>
+    <table class="center_div">
 
-<table>
+        <tr>
+            <th>Position</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Grade Level</th>
+            <th>Events Attended</th>
+            <th>Points</th>
+            <th>Winner</th>
+        </tr>
 
-    <tr>
-        <th>Position</th>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Grade Level</th>
-        <th>Events Attended</th>
-        <th>Points</th>
-        <th>Winner</th>
-    </tr>
+        {% for student in users_data %}
 
-    {% for student in users_data %}
+        <tr>
+            <td class="center">{{ loop.index }}</td>
+            <td>{{ student['first_name'] }}</td>
+            <td>{{ student['last_name'] }}</td>
+            <td class="center">{{ student['grade_level'] }}</td>
+            <td class="center">{{ student['num_attended'] }}</td>
+            <td class="center">{{ student['points'] }}</td>
+            <td class="center">{{ student.get('winner', "") }}</td>
+        </tr>
 
-    <tr>
-        <td>{{ loop.index }}</td>
-        <td>{{ student['first_name'] }}</td>
-        <td>{{ student['last_name'] }}</td>
-        <td>{{ student['grade_level'] }}</td>
-        <td>{{ student['num_attended'] }}</td>
-        <td>{{ student['points'] }}</td>
-        <td>{{ student.get('winner', "") }}</td>
-    </tr>
+        {% endfor %}
 
-    {% endfor %}
+    </table>
+</div>
 
-</table>
-
+<div class="center_div" style="display: block">
 <form name="archive" method="post">
 
     <input type="submit" name="btn" value="Archive">
@@ -52,6 +54,6 @@
     <input type="submit" name="btn" value="Select">
 
 </form>
-
+</div>
 
 {% endblock %}
