--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -33,6 +33,7 @@ button, input[type=submit] {
     font-family: "Source Sans Pro", sans-serif;
     margin: 10px;
     padding: 5px 10px;
+    font-size: 18px;
 }
 
 div {
@@ -82,17 +83,29 @@ tbody {
 }
 
 .header_item {
-    padding: 15px 20px;
+    padding: 15px 0;
     max-height: 90px;
-    text-align: center;
+    width: 360px;
 }
 
 .header_item button {
     vertical-align: middle;
 }
-.header_item img {
-    float: left;
+.header_item_left {
+    text-align: left;
+    padding-left: 25px;
     vertical-align: middle;
+}
+
+.header_item_right {
+    padding-right: 25px;
+    text-align: right;
+    vertical-align: middle;
+}
+
+.header_item img {
+    vertical-align: middle;
+    height: 50px;
 }
 
 .header_item h1 {
