--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -24,20 +24,32 @@ button, input {
     cursor: pointer;
 }
 
-button, input[type=submit] {
+button, input[type=submit], input[type=text], input[type=number], select {
     border-radius: 10px;
     border-width: 3px;
     border-color: #05405c;
     border-style: solid;
-    background-color: #FFFFFF;
+    background-color: #f0f9ff;
     font-family: "Source Sans Pro", sans-serif;
     margin: 10px;
     padding: 5px 10px;
     font-size: 18px;
 }
 
-div {
+col {
+   padding: 5px;
+}
 
+h1 {
+    text-decoration: underline;
+}
+
+h2 {
+    font-weight: normal;
+}
+
+h3 {
+    padding: 0;
 }
 
 header {
@@ -52,13 +64,51 @@ header {
     font-weight: bold;
 }
 
+input[type=checkbox] {
+    height: 20px;
+    width: 20px;
+    outline: 3px solid #05405c;
+    vertical-align: middle;
+}
+
+
+label {
+    font-size: 20px;
+    vertical-align: middle;
+}
+
+table {
+    margin: 20px;
+    border-collapse: collapse;
+    color: black;
+}
+
 tbody {
-    padding: 20px;
     border-style: solid;
     border-radius: 5px;
     border-width: 3px;
-    border-color: #FFFFFF;
+    border-color: #05405c;
 }
+
+td {
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #f0f9ff;
+}
+tr:nth-child(odd) {
+    background-color: #b1d2e3;
+}
+
+th {
+    background-color: #05405c;
+    color: white;
+    height: 40px;
+    font-size: 18px;
+    padding: 8px;
+}
+
 
 
 /* Classes */
@@ -74,7 +124,6 @@ tbody {
 .center_div {
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 
 .error_display {
@@ -82,10 +131,18 @@ tbody {
     color: darkred;
 }
 
+.events_div {
+    flex-wrap: wrap;
+    width: 75%;
+    margin: auto;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 .header_item {
     padding: 15px 0;
     max-height: 90px;
-    width: 360px;
+    width: 480px;
 }
 
 .header_item button {
@@ -110,5 +167,22 @@ tbody {
 
 .header_item h1 {
     position: relative;
+}
+
+.message_display {
+    color: lightgreen;
+    padding: 15px;
+}
+
+.prize_item {
+    border-style: solid;
+    border-color: #05405c;
+    border-radius: 5px;
+    border-width: 5px;
+    padding: 10px;
+    margin: 20px auto;
+    color: black;
+    background-color: #f0f9ff;
+    width: fit-content;
 }
 
