--- a/templates/event_info.html
+++ b/templates/event_info.html
@@ -6,13 +6,14 @@
 
 <!-- Picks up where base.html left off -->
 {% block content %}
-<p>
-    {{ event['name'] }}<br>
-    {{ event['desc'] }}<br>
+<div class="center">
+
+    <h1>{{ event['name'] }}</h1>
+    <h2>{{ event['desc'] }}<br>
     Type: {{ event['type'] }}<br>
     Date: {{ event['date'] }}<br>
-    Time: {{ event['time'] }}
-</p>
+    Time: {{ event['time'] }}</h2>
+
 
 <form method="post">
     <input type="checkbox" id="confirm_attend" name="confirm_attend">
@@ -20,12 +21,12 @@
     <input type="submit">
 </form>
 
-<p>{{ confirm_error }}</p>
+<p class="error_display">{{ confirm_error }}</p>
 
 <a href="{{ url_for('events_page') }}">
     <button>
         Back to Events
     </button>
 </a>
-
+</div>
 {% endblock %}
