--- a/templates/base.html
+++ b/templates/base.html
@@ -71,14 +71,16 @@ Jinja2 also connects HTML files together (ex. base.html & login.html)
             <li><a href="https://docs.python.org/3/" target="_blank">Official Python Documentation</a></li>
             <li><a href="https://flask.palletsprojects.com/en/2.2.x/" target="_blank">Official Flask Documentation</a></li>
             <li><a href="https://jinja.palletsprojects.com/en/3.1.x/" target="_blank">Official Jinja Documentation</a></li>
+            <li><a href="https://pyinstaller.org/en/stable/index.html" target="_blank">Official PyInstaller Documentation</a></li>
             <li><a href="https://fonts.google.com/" target="_blank">Source Sans Pro font from Google Open Source Fonts</a></li>
             <li><a href="https://fonts.google.com/icons" target="_blank">All iconography from Google Open Source Fonts</a></li>
             <li><a href="https://stackoverflow.com/a/47504953" target="_blank">Random 6-digit code generator in server.py</a></li>
             <li><a href="https://flask.palletsprojects.com/en/1.0.x/patterns/errorpages/" target="_blank">Error handler code in server.py</a></li>
+            <li><a href="https://stackoverflow.com/a/13790741" target="_blank">File path generator for PyInstaller</a></li>
         </ul>
     </div>
     <div class="center">
-        <h3><a href="https://github.com/meepowlz/FBLA-2022" target="_blank">GitHub Repository</h3>
+        <h3><a href="https://github.com/meepowlz/FBLA-2022" target="_blank">GitHub Repository</a></h3>
     </div>
     {% endblock %}
 
